0.0.4
1st release

0.0.5
Added case insensitive search.
Function menu updated on save file.
Added revert.
Added GUI for Prefs.
Added save state of search sensitive to rc file.
Added teminal command to prefs.
Code clean.
Bug Fix.
Updated Help file.

0.0.6
Added wrap for search replace.
Dim function menu when no functions available.
Apply prefs immedietly.
Added save search wrap mode

0.0.7
Removed 'Save-As' from toolbar.
Added save/restore session
Added simple bookmarks

0.0.8
Can now use escapes in search/replace \n, \t etc.
Added monitor for file changed on disk.
Code clean.
Added go to line number in navigation menu.
Added run async external tool.
Help now runs async.
Set new env variable to selected text.
Added Find API to installed tools.

0.0.9
Added external tool creater GUI.
Bug fix crash on closing empty new tab.
Set senitive on save/saveas buttons menu items on startup.