@@ -26,7 +26,7 @@ PKG_CHECK_MODULES(GTK, $GTK_MODULES)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
-GTKSRC_MODULES="gtksourceview-2.0 >= 2.11.1"
+GTKSRC_MODULES="gtksourceview-2.0 >= 2.9.9"
 PKG_CHECK_MODULES(GTKSRC, $GTKSRC_MODULES)
 AC_SUBST(GTKSRC_CFLAGS)
 AC_SUBST(GTKSRC_LIBS)
